force-app/main/default/objects/Distributor_Stock__c/fields/Current_Stock__c.field-meta.xml
<CustomField>
    <fullName>Current_Stock__c</fullName>
    <label>Current Stock (Cases)</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>