force-app/main/default/objects/Distributor_Stock__c/fields/Expired_Qty__c.field-meta.xml
<CustomField>
    <fullName>Expired_Qty__c</fullName>
    <label>Expired Qty</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>