force-app/main/default/objects/Distributor_Stock__c/fields/Price_Pc__c.field-meta.xml
<CustomField>
    <fullName>Price_Pc__c</fullName>
    <label>Price / Pc</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>