force-app/main/default/objects/Distributor_Stock__c/fields/Warehouse_ERP_Id__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_ERP_Id__c</fullName>
    <label>Warehouse ERP Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>